apps/minecraft/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    istio.io/dataplane-mode: ambient
