apps/minecraft/base/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: minecraft
  namespace: minecraft
spec:
  parentRefs:
    - name: shared-gateway
      namespace: istio-system
      sectionName: minecraft
  rules:
    - backendRefs:
        - name: minecraft
          port: 25565
